@@ -10,6 +10,8 @@ Version 1.3.13+svn:
    * mountains no longer have a hill as base
    * when a leader dies the villages, which are no longer are owned, are
      properly redrawn (bug #9136)
+   * sometimes the first hitpoints left percentage and the unscatched had a 
+     difference of 0.1%, this has been fixed (bug #9122)
  * language and i18n:
    * updated translations: Chinese, Danish, Finnish, French, German, Italian,
      Lithuanian, Slovak, Spanish
